--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Ankit Kanteliya",
   "license": "ISC",
   "dependencies": {
+    "@vercel/node": "^3.0.18",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "ejs": "^3.1.9",
